--- a/online/01/index.html
+++ b/online/01/index.html
@@ -47,6 +47,11 @@ text-align:center;}
 							<ul>
 								<li><a href="#">날짜별 보기</a>
 									<ul>
+										<li><a href="0316.html">3월16일</a></li>
+										<li><a href="0317.html">3월17일</a></li>
+										<li><a href="0318.html">3월18일</a></li>
+										<li><a href="0319.html">3월19일</a></li>
+										<li><a href="0320.html">3월20일</a></li>										
 										<li><a href="0309.html">3월9일</a></li>
 										<li><a href="0310.html">3월10일</a></li>
 										<li><a href="0311.html">3월11일</a></li>
@@ -56,7 +61,7 @@ text-align:center;}
 								</li>
 								<li class="current"><a href="#">1학년 보기</a></li>
 								<li ><a href="../02/index.html">2학년 보기</a></li>
-								<li ><a href="../01/index.html">3학년 보기</a></li>
+								<li ><a href="../03/index.html">3학년 보기</a></li>
 								<li><a href="#">더 공부하기</a>
 <ul>
 										<li><a href="../edunet.html">수업 자료 검색</a></li>
@@ -87,7 +92,22 @@ text-align:center;}
 									<!-- 왼쪽 메뉴 -->
 
 										<section>
-											<h3>가정학습 날짜</h3>
+                                            <h3>가정학습 날짜</h3>
+											<footer>
+												<a href="0316.html" class="button">3월 16일</a>
+											</footer>
+											<footer>
+												<a href="0317.html" class="button">3월 17일</a>
+											</footer>
+											<footer>
+												<a href="0318.html" class="button">3월 18일</a>
+											</footer>
+											<footer>
+												<a href="0319.html" class="button">3월 19일</a>
+											</footer>
+											<footer>
+												<a href="0320.html" class="button">3월 20일</a>
+											</footer>
 											<footer>
 												<a href="0309.html" class="button">3월 9일</a>
 											</footer>
@@ -112,11 +132,170 @@ text-align:center;}
 									<!-- 본문 시작 -->
 
 										<article>
-
+                                            <table style="border-collapse:collapse;table-layout:fixed;border-top:none;border-left:none;border-bottom:none;border-right:none;mso-table-overlap:never;" width="100%">
+                                                <tr>
+                                                    <td valign="middle"> 3주차
+                                                    </td>
+                                                    <td>월        </td>
+                                                    <td>            화        </td>
+                                                    <td>            수        </td>
+                                                    <td>            목        </td>
+                                                    <td>            금        </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2" valign="middle">
+                                                        1교시
+                                                    </td>
+                                                    <td valign="middle">
+                                                       국어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       수학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       역사
+                                                    </td>
+                                                    <td valign="middle">
+                                                       영어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       과학
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="middle">
+                                                        <a href="0316.html#1">1-(1)비유와 상징<br>비유</a>
+                                                    </td>
+                                                    <td  valign="middle">            
+                                                        <a href="0317.html#1">수직선에 점 대응하기</a>
+                                                    </td>
+                                                    <td  valign="middle">
+                                                        <a href="0318.html#1">1-02. 위치와 인간생활</a>
+                                                    </td>
+                                                    <td  valign="middle">
+                                                       <a href="0319.html#1">06. Why Are You so Worried?</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#1">교과 연계 독서 활동<br>자유 선택 도서</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2" valign="middle">
+                                                        2교시
+                                                    </td>
+                                                    <td  valign="middle">
+                                                       영어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       과학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       국어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       과학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       사회
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="middle">
+                                                        <a href="0316.html#2">04. I’m Looking for a T-shirt</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0317.html#2">교과 연계 독서 활동</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0318.html#2">1-(1) 비유와 상징<br>상징</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0319.html#2">교과 연계 독서 활동</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#2">교과 연계 독서 활동<br>80일간의 세계 일주</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2"  valign="middle">
+                                                        3교시
+                                                    </td>
+                                                    <td  valign="middle">
+                                                       수학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       역사
+                                                    </td>
+                                                    <td valign="middle">
+                                                       영어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       수학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       국어
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td  valign="middle">            
+                                                        <a href="0316.html#3">음수의 역사<br>EBS MATH</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0317.html#3">교과 연계 독서 활동<br>80일간의 세계 일주</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0318.html#3">05. What Are You Going to Do Tomorrow? </a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0319.html#3">0과 음수의 탄생</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#3">1-(1)비유와 상징<br>비유, 상징</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2" valign="middle">
+                                                        4교시
+                                                    </td>
+                                                    <td valign="middle">
+                                                       음악
+                                                    </td>
+                                                    <td valign="middle">
+                                                       체육
+                                                    </td>
+                                                    <td valign="middle">
+                                                       미술
+                                                    </td>
+                                                    <td valign="middle">
+                                                       체육
+                                                    </td>
+                                                    <td valign="middle">
+                                                       한문
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="middle">
+                                                        <a href="0316.html#4">노래로 공부하기</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0317.html#4">줄넘기 30분</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0318.html#4">동양화 감상하기</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0319.html#4">줄넘기 30분</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#4">1단원 신습 한자 익히기</a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <p></p>
 
 									<table style="border-collapse:collapse;table-layout:fixed;border-top:none;border-left:none;border-bottom:none;border-right:none;mso-table-overlap:never;" width="100%">
     <tr>
-        <td valign="middle">
+        <td valign="middle"> 2주차
         </td>
         <td>월        </td>
         <td>            화        </td>
