--- a/online/02/index.html
+++ b/online/02/index.html
@@ -47,6 +47,11 @@ text-align:center;}
 							<ul>
 								<li><a href="#">날짜별 보기</a>
 									<ul>
+										<li><a href="0316.html">3월16일</a></li>
+										<li><a href="0317.html">3월17일</a></li>
+										<li><a href="0318.html">3월18일</a></li>
+										<li><a href="0319.html">3월19일</a></li>
+										<li><a href="0320.html">3월20일</a></li>										
 										<li><a href="0309.html">3월9일</a></li>
 										<li><a href="0310.html">3월10일</a></li>
 										<li><a href="0311.html">3월11일</a></li>
@@ -56,7 +61,7 @@ text-align:center;}
 								</li>
 								<li><a href="../01/index.html">1학년 보기</a></li>
 								<li class="current"><a href="#">2학년 보기</a></li>
-								<li><a href="../03/index.html">3학년 보기</a></li>
+								<li ><a href="../03/index.html">3학년 보기</a></li>
 								<li><a href="#">더 공부하기</a>
 <ul>
 										<li><a href="../edunet.html">수업 자료 검색</a></li>
@@ -74,7 +79,7 @@ text-align:center;}
 			<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-<h2> 2학년 가정학습 시간표</h2>
+							<h2>2학년 가정학습 시간표</h2>
 						</header>
 					</div>
 			</section>
@@ -87,7 +92,22 @@ text-align:center;}
 									<!-- 왼쪽 메뉴 -->
 
 										<section>
-											<h3>가정학습 날짜</h3>
+                                            <h3>가정학습 날짜</h3>
+											<footer>
+												<a href="0316.html" class="button">3월 16일</a>
+											</footer>
+											<footer>
+												<a href="0317.html" class="button">3월 17일</a>
+											</footer>
+											<footer>
+												<a href="0318.html" class="button">3월 18일</a>
+											</footer>
+											<footer>
+												<a href="0319.html" class="button">3월 19일</a>
+											</footer>
+											<footer>
+												<a href="0320.html" class="button">3월 20일</a>
+											</footer>
 											<footer>
 												<a href="0309.html" class="button">3월 9일</a>
 											</footer>
@@ -112,10 +132,170 @@ text-align:center;}
 									<!-- 본문 시작 -->
 
 										<article>
+                                            <table style="border-collapse:collapse;table-layout:fixed;border-top:none;border-left:none;border-bottom:none;border-right:none;mso-table-overlap:never;" width="100%">
+                                                <tr>
+                                                    <td valign="middle"> 3주차
+                                                    </td>
+                                                    <td>월        </td>
+                                                    <td>            화        </td>
+                                                    <td>            수        </td>
+                                                    <td>            목        </td>
+                                                    <td>            금        </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2" valign="middle">
+                                                        1교시
+                                                    </td>
+                                                    <td valign="middle">
+                                                       국어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       수학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       역사
+                                                    </td>
+                                                    <td valign="middle">
+                                                       영어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       과학
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="middle">
+                                                        <a href="0316.html#1">2. 나도 설명의 달인<br>다양한 설명 방법</a>
+                                                    </td>
+                                                    <td  valign="middle">            
+                                                        <a href="0317.html#1">순환소수의 규칙성<br>EBS MATH</a>
+                                                    </td>
+                                                    <td  valign="middle">
+                                                        <a href="0318.html#1">춘추전국시대와 제자백가<br>법가사상</a>
+                                                    </td>
+                                                    <td  valign="middle">
+                                                       <a href="0319.html#1">영어 독서 활동<br>리딩게이트</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#1">이온을 식으로 표현하기</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2" valign="middle">
+                                                        2교시
+                                                    </td>
+                                                    <td  valign="middle">
+                                                       영어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       과학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       국어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       과학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       역사
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="middle">
+                                                        <a href="0316.html#2">영어 독서 활동<br>리딩게이트</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0317.html#2">물질의 구성<br>이온의 개념</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0318.html#2">2. 나도 설명의 달인<br>다양한 설명 방법</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0319.html#2">물질의 구성<br>모형으로 알아보는 이온</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#2">춘추전국시대와 제자백가<br>교과서 읽으며 확인하기</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2"  valign="middle">
+                                                        3교시
+                                                    </td>
+                                                    <td  valign="middle">
+                                                       수학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       역사
+                                                    </td>
+                                                    <td valign="middle">
+                                                       영어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       수학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       국어
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td  valign="middle">            
+                                                        <a href="0316.html#3">지수와 유리수<br>0.999...와 1의 차이</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0317.html#3">춘추전국시대와 제자백가<br>도가사상</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0318.html#3">영어듣기평가 대비<br>모르는 표현 정리하기</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0319.html#3">순환소수의 규칙성</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#3">2. 나도 설명의 달인<br>설명 방식 형성평가</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2" valign="middle">
+                                                        4교시
+                                                    </td>
+                                                    <td valign="middle">
+                                                       음악
+                                                    </td>
+                                                    <td valign="middle">
+                                                       체육
+                                                    </td>
+                                                    <td valign="middle">
+                                                       미술
+                                                    </td>
+                                                    <td valign="middle">
+                                                       체육
+                                                    </td>
+                                                    <td valign="middle">
+                                                       한문
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="middle">
+                                                        <a href="0316.html#4">랩과 힙합의 기초</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0317.html#4">줄넘기 30분</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0318.html#4">실크스크린의 기초</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0319.html#4">줄넘기 30분</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#4">11단원 신습 한자 익히기</a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <p></p>
 
 									<table style="border-collapse:collapse;table-layout:fixed;border-top:none;border-left:none;border-bottom:none;border-right:none;mso-table-overlap:never;" width="100%">
     <tr>
-        <td valign="middle">
+        <td valign="middle"> 2주차
         </td>
         <td>월        </td>
         <td>            화        </td>
@@ -128,36 +308,36 @@ text-align:center;}
             1교시
         </td>
         <td valign="middle">
-            국어
+           국어
         </td>
         <td valign="middle">
-            수학
+           수학
         </td>
         <td valign="middle">
-            역사
+           역사
         </td>
         <td valign="middle">
-            영어
+           영어
         </td>
         <td valign="middle">
-            과학
+           과학
         </td>
     </tr>
     <tr>
         <td valign="middle">
-            <a href="0309.html#1">다양한 표현 익히기(운율)</a>
+            <a href="0309.html#1">감천 리틀빅히어로 프로젝트(1)<br>제재 선정</a>
         </td>
         <td  valign="middle">            
-            <a href="0310.html#1">분수를 유한소수와 순환소수로 표현하기</a>
+            <a href="0310.html#1">교과 연계 독서 활동<br>박사가 사랑한 수식</a>
         </td>
         <td  valign="middle">
-            <a href="0311.html#1">춘추전국시대, 유가의 사상</a>
+            <a href="0311.html#1">교과 연계 독서 활동<br>80일간의 세계 일주(1)</a>
         </td>
         <td  valign="middle">
-           <a href="0312.html#1">2019  영어듣기 평가에서 모르는 표현 정리</a>
+           <a href="0312.html#1">03. She Has Long Hair</a>
         </td>
         <td valign="middle">
-            <a href="0313.html#1">불꽃색과 스펙트럼으로 원소를 구별하기</a>
+            <a href="0313.html#1">교과 연계 독서 활동<br>자유 선택 도서</a>
         </td>
     </tr>
     <tr>
@@ -165,37 +345,36 @@ text-align:center;}
             2교시
         </td>
         <td  valign="middle">
-            영어
+           영어
         </td>
         <td valign="middle">
-            과학
+           과학
         </td>
         <td valign="middle">
-            국어
+           국어
         </td>
         <td valign="middle">
-            과학
+           과학
         </td>
         <td valign="middle">
-            사회
+           사회
         </td>
     </tr>
     <tr>
         <td valign="middle">
-            <a href="0309.html#2">리딩게이트 속 책을 1권
-읽고 활동하기</a>
+            <a href="0309.html#2">01. What's Your Favorite Sport?</a>
         </td>
         <td valign="middle">
-            <a href="0310.html#2">원소의 개념</a>
+            <a href="0310.html#2">지구계의 구성 요소</a>
         </td>
         <td valign="middle">
-            <a href="0311.html#2">다양한 표현 익히기(반어와 역설)</a>
+            <a href="0311.html#2">감천 리틀빅히어로 프로젝트(2)<br>내용 생성</a>
         </td>
         <td valign="middle">
-            <a href="0312.html#2">원소와 원자의 개념</a>
+            <a href="0312.html#2">지구의 내부 구조</a>
         </td>
         <td valign="middle">
-            <a href="0313.html#2">춘추전국시대, 묵가의 사상</a>
+            <a href="0313.html#2">교과 연계 독서 활동<br>80일간의 세계 일주(2)</a>
         </td>
     </tr>
     <tr>
@@ -203,36 +382,36 @@ text-align:center;}
             3교시
         </td>
         <td  valign="middle">
-            수학
+           수학
         </td>
         <td valign="middle">
-            역사
+           역사
         </td>
         <td valign="middle">
-            영어
+           영어
         </td>
         <td valign="middle">
-            수학
+           수학
         </td>
         <td valign="middle">
-            국어
+           국어
         </td>
     </tr>
     <tr>
         <td  valign="middle">            
-            <a href="0309.html#3">유한소수, 무한소수, 순환소수의 개념</a>
+            <a href="0309.html#3">양수와 음수</a>
         </td>
         <td valign="middle">
-            <a href="0310.html#3">춘추전국시대, 제자백가의 출현과 개관</a>
+            <a href="0310.html#3">1-01. 지도 읽기<br>지도의 개념과 특성</a>
         </td>
         <td valign="middle">
-            <a href="0311.html#3">희망이나 기대를 영어로 표현하기</a>
+            <a href="0311.html#3">02. How Do You Feel Today? </a>
         </td>
         <td valign="middle">
-            <a href="0312.html#3">순환소수의 분수 표현</a>
+            <a href="0312.html#3">유리수의 분류</a>
         </td>
         <td valign="middle">
-            <a href="0313.html#3">다양한 표현 익히기(관용표현)</a>
+            <a href="0313.html#3">감천 리틀빅히어로 프로젝트(3)<br>내용 작성</a>
         </td>
     </tr>
     <tr>
@@ -240,36 +419,36 @@ text-align:center;}
             4교시
         </td>
         <td valign="middle">
-            음악
+           음악
         </td>
         <td valign="middle">
-            체육
+           체육
         </td>
         <td valign="middle">
-            미술
+           미술
         </td>
         <td valign="middle">
-            체육
+           체육
         </td>
         <td valign="middle">
-            인문
+           인문
         </td>
     </tr>
     <tr>
         <td valign="middle">
-            <a href="0309.html#4">뮤지컬 이야기</a>
+            <a href="0309.html#4">주변의 물건으로 음악 표현하기</a>
         </td>
         <td valign="middle">
             <a href="0310.html#4">줄넘기 30분</a>
         </td>
         <td valign="middle">
-            <a href="0311.html#4">실크스크린 </a>
+            <a href="0311.html#4">서양의 명화 감상</a>
         </td>
         <td valign="middle">
             <a href="0312.html#4">줄넘기 30분</a>
         </td>
         <td valign="middle">
-            <a href="0313.html#4">인문학 특강 스스로 골라 시청하기</a>
+            <a href="0313.html#4">4차 산업 혁명 특강 시청하고 생각 정리하기</a>
         </td>
     </tr>
 </table>
