--- a/online/03/index.html
+++ b/online/03/index.html
@@ -40,13 +40,18 @@ text-align:center;}
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">감천중학교 <em> 3학년 가정학습실</em></a></h1>
+												<h1><a href="index.html" id="logo">감천중학교 <em> 3학년 가정학습실</em></a></h1>
 
 					<!-- 상단 메뉴-->
 						<nav id="nav">
 							<ul>
 								<li><a href="#">날짜별 보기</a>
 									<ul>
+										<li><a href="0316.html">3월16일</a></li>
+										<li><a href="0317.html">3월17일</a></li>
+										<li><a href="0318.html">3월18일</a></li>
+										<li><a href="0319.html">3월19일</a></li>
+										<li><a href="0320.html">3월20일</a></li>
 										<li><a href="0309.html">3월9일</a></li>
 										<li><a href="0310.html">3월10일</a></li>
 										<li><a href="0311.html">3월11일</a></li>
@@ -112,10 +117,170 @@ text-align:center;}
 									<!-- 본문 시작 -->
 
 										<article>
+  <table style="border-collapse:collapse;table-layout:fixed;border-top:none;border-left:none;border-bottom:none;border-right:none;mso-table-overlap:never;" width="100%">
+                                                <tr>
+                                                    <td valign="middle"> 3주차
+                                                    </td>
+                                                    <td>월        </td>
+                                                    <td>            화        </td>
+                                                    <td>            수        </td>
+                                                    <td>            목        </td>
+                                                    <td>            금        </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2" valign="middle">
+                                                        1교시
+                                                    </td>
+                                                    <td valign="middle">
+                                                       국어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       수학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       역사
+                                                    </td>
+                                                    <td valign="middle">
+                                                       영어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       과학
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="middle">
+                                                        <a href="0316.html#1">2. 나도 설명의 달인<br>다양한 설명 방법</a>
+                                                    </td>
+                                                    <td  valign="middle">            
+                                                        <a href="0317.html#1">순환소수의 규칙성<br>EBS MATH</a>
+                                                    </td>
+                                                    <td  valign="middle">
+                                                        <a href="0318.html#1">춘추전국시대와 제자백가<br>법가사상</a>
+                                                    </td>
+                                                    <td  valign="middle">
+                                                       <a href="0319.html#1">영어 독서 활동<br>리딩게이트</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#1">이온을 식으로 표현하기</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2" valign="middle">
+                                                        2교시
+                                                    </td>
+                                                    <td  valign="middle">
+                                                       영어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       과학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       국어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       과학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       역사
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="middle">
+                                                        <a href="0316.html#2">영어 독서 활동<br>리딩게이트</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0317.html#2">물질의 구성<br>이온의 개념</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0318.html#2">2. 나도 설명의 달인<br>다양한 설명 방법</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0319.html#2">물질의 구성<br>모형으로 알아보는 이온</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#2">춘추전국시대와 제자백가<br>교과서 읽으며 확인하기</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2"  valign="middle">
+                                                        3교시
+                                                    </td>
+                                                    <td  valign="middle">
+                                                       수학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       역사
+                                                    </td>
+                                                    <td valign="middle">
+                                                       영어
+                                                    </td>
+                                                    <td valign="middle">
+                                                       수학
+                                                    </td>
+                                                    <td valign="middle">
+                                                       국어
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td  valign="middle">            
+                                                        <a href="0316.html#3">지수와 유리수<br>0.999...와 1의 차이</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0317.html#3">춘추전국시대와 제자백가<br>도가사상</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0318.html#3">영어듣기평가 대비<br>모르는 표현 정리하기</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0319.html#3">순환소수의 규칙성</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#3">2. 나도 설명의 달인<br>설명 방식 형성평가</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td rowspan="2" valign="middle">
+                                                        4교시
+                                                    </td>
+                                                    <td valign="middle">
+                                                       음악
+                                                    </td>
+                                                    <td valign="middle">
+                                                       체육
+                                                    </td>
+                                                    <td valign="middle">
+                                                       미술
+                                                    </td>
+                                                    <td valign="middle">
+                                                       체육
+                                                    </td>
+                                                    <td valign="middle">
+                                                       한문
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="middle">
+                                                        <a href="0316.html#4">랩과 힙합의 기초</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0317.html#4">줄넘기 30분</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0318.html#4">실크스크린의 기초</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0319.html#4">줄넘기 30분</a>
+                                                    </td>
+                                                    <td valign="middle">
+                                                        <a href="0320.html#4">11단원 신습 한자 익히기</a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <p></p>
 
 									<table style="border-collapse:collapse;table-layout:fixed;border-top:none;border-left:none;border-bottom:none;border-right:none;mso-table-overlap:never;" width="100%">
     <tr>
-        <td valign="middle">
+        <td valign="middle">2주차
         </td>
         <td>월        </td>
         <td>            화        </td>
