--- a/online/03/0317.html
+++ b/online/03/0317.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>3월 12일 감천중학교 가정학습실</title>
+		<title>3월 17일 감천중학교 가정학습실</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,13 +26,18 @@ iframe {max-width:100%;  height:720px;}
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">감천중학교 <em> 1학년 가정학습실</em></a></h1>
+											<h1><a href="index.html" id="logo">감천중학교 <em> 3학년 가정학습실</em></a></h1>
 
 					<!-- 상단 메뉴-->
 						<nav id="nav">
 							<ul>
 								<li><a href="#">날짜별 보기</a>
 									<ul>
+										<li><a href="0316.html">3월16일</a></li>
+										<li><a href="0317.html">3월17일</a></li>
+										<li><a href="0318.html">3월18일</a></li>
+										<li><a href="0319.html">3월19일</a></li>
+										<li><a href="0320.html">3월20일</a></li>
 										<li><a href="0309.html">3월9일</a></li>
 										<li><a href="0310.html">3월10일</a></li>
 										<li><a href="0311.html">3월11일</a></li>
@@ -40,10 +45,10 @@ iframe {max-width:100%;  height:720px;}
 										<li><a href="0313.html">3월13일</a></li>										
 									</ul>
 								</li>
-								<li class="current"><a href="#">1학년 보기</a></li>
-								<li ><a href="../02/index.html">2학년 보기</a></li>
-								<li ><a href="../03/index.html">3학년 보기</a></li>
-																<li><a href="#">더 공부하기</a>
+								<li><a href="../01/index.html">1학년 보기</a></li>
+								<li><a href="../02/index.html">2학년 보기</a></li>
+								<li class="current"><a href="#">3학년 보기</a></li>
+								<li><a href="#">더 공부하기</a>
 <ul>
 										<li><a href="../edunet.html">수업 자료 검색</a></li>
 										<li><a href="../cls.html">혼자 진도나가기</a></li>
@@ -60,7 +65,7 @@ iframe {max-width:100%;  height:720px;}
 			<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<a href="#" class="button">3월 12일 </a> <h2> 사회적 거리두기로 코로나 이겨냅시다.</h2>
+							<a href="#" class="button">3월 17일 </a> <h2> 사회적 거리두기로 코로나 이겨냅시다.</h2>
 						</header>
 					</div>
 			</section>
@@ -74,6 +79,21 @@ iframe {max-width:100%;  height:720px;}
 
 										<section>
 											<h3>가정학습 날짜</h3>
+											<footer>
+												<a href="0316.html" class="button">3월 16일</a>
+											</footer>
+											<footer>
+												<a href="0317.html" class="button">3월 17일</a>
+											</footer>
+											<footer>
+												<a href="0318.html" class="button">3월 18일</a>
+											</footer>
+											<footer>
+												<a href="0319.html" class="button">3월 19일</a>
+											</footer>
+											<footer>
+												<a href="0320.html" class="button">3월 20일</a>
+											</footer>
 											<footer>
 												<a href="0309.html" class="button">3월 9일</a>
 											</footer>
@@ -101,47 +121,45 @@ iframe {max-width:100%;  height:720px;}
 
 									<!-- 1교시 -->
 											<header>
-													<h2><a name="1">1교시:</a>영어</h2>
-<!-- 관련 단원명 --><h3>03. She Has Long Hair</h3>
+													<h2><a name="1">1교시:</a>수학</h2>
+<!-- 관련 단원명 --><h3>01. 지수와 유리수</h3>
 												</header>
-							<form name="mc">				
-<!-- 핵심 학습 요소를 간략히 기술 --><p>영어로 외양 묘사하기와 잘하는 것 말하기를 해 봅시다.<br>
-<video src="http://content-cdn.edunet.net/edudata/content/midd/g1/com/eng/midd_g1_com_eng_3990.mp4" controls="controls"></video>
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[0].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[0].pause();">
-</form>
-</P>
+												
+                                                <form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->순환 소수의 규칙성을 알아봅시다.
+                                                    <video src="http://wstr.ebsmath.co.kr/ebsvod/ebsm/M42M1401/M201400001/M201400001_2000K_M00002.mp4" controls="controls"></video><br>
+                                                            <input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[0].play();">
+                                                            <input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[0].pause();">
+                                                    </form>
+                                                    </p>
 
 									<!-- 2교시 -->
 											<header>
 												<h2><a name="2">2교시:</a>과학</h2>	
-<!-- 관련 단원명 --><h3>01. 지권의 변화</h3>
-											</header>
-							<form name="mc">				
-<!-- 핵심 학습 요소를 간략히 기술 --><p>지구의 내부 구조를 알아 봅시다.<br>
-<video src="http://content-cdn.edunet.net/edudata/content/midd/g1/com/sci/midd_g1_com_sci_4151.mp4" controls="controls"></video>
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[1].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[1].pause();">
-</form>
-</p><p>
-<form name="mc">
-<video src="http://content-cdn.edunet.net/edudata/content/midd/g1/com/sci/midd_g1_com_sci_4164.mp4" controls="controls"></video>
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[2].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[2].pause();">
-</form></p>
-
+<!-- 관련 단원명 --><h3>01. 물질의 구성</h3>
+</header>
+									
+<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->이온의 형성을 알아 봅시다.
+	<video src="https://content-cdn.edunet.net/edudata/content/midd/g2/com/sci/midd_g2_com_sci_15788.mp4
+	" controls="controls"></video><br>
+			<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[1].play();">
+			<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[1].pause();">
+	</form>
+	</p>
 
 
 									<!-- 3교시 -->
 											<header>
-												<h2><a name="3">3교시:</a>수학</h2>
-<!-- 관련 단원명 --><h3>01. 지수와 유리수</h3>
-											</header><form name="mc">
-<!-- 핵심 학습 요소를 간략히 기술 --><p>유리수를 분류해 봅시다.<br>
-<video src="http://content-cdn.edunet.net/edudata/content/midd/g1/com/mat/midd_g1_com_mat_6058.mp4" controls="controls"></video>
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[3].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[3].pause();">
-</form></p>
+												<h2><a name="3">3교시:</a>역사</h2>
+<!-- 관련 단원명 --><h3>춘추전국시대와 제자백가</h3>
+											</header>
+<!-- 핵심 학습 요소를 간략히 기술 --><p>제자백가 중 도가에 대해 알아 봅시다.<br>
+	<p><iframe width="100%" height="720px" src="https://www.youtube.com//embed/t6C51x918Pg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+	<p><iframe width="100%" height="720px" src="https://www.youtube.com//embed/7DPfQ_M5oEo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+	<p><iframe width="100%" height="720px" src="https://www.youtube.com//embed/g3-ZFxMXizo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+	<p><iframe width="100%" height="720px" src="https://www.youtube.com//embed/q-vgPfX-Uh0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+
+	
+
 
 
 									<!--4교시 -->											
@@ -150,11 +168,8 @@ iframe {max-width:100%;  height:720px;}
 												<h2><a name="4">4교시:</a>체육</h2>
 												<h3>하루 30분 줄넘기 하기</h3>
 											</header>
-												<p>영상을 보면서 잘못된 줄넘기 습관을 고쳐 봅시다.<br>
-												<iframe width="100%" height="720px" src="https://www.youtube.com/embed/JBtsEvMN3b0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-												<p></p>
-		
-														</p>
+												<p>영상을 보면서 멋지게 줄넘기를 해 봅시다.<br>
+                                                    <iframe width="100%" height="720px" src="https://www.youtube.com/embed/eYbh3thSMu4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 
 </article>
